recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:10: error: not found: value doite
    faireCarre() ; doite(90)
                   ^